fix: scroll on iphone XR

--- a/arbitrum_react/src/sass/style.scss
+++ b/arbitrum_react/src/sass/style.scss
@@ -80,11 +80,10 @@
 }
 
 .cloud {
-  font-family: Playfair Display !important;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 20px;
-  line-height: 27px;
+  // font-style: normal;
+  // font-weight: 400;
+  // font-size: 20px;
+  // line-height: 27px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -95,13 +94,16 @@
 }
 
 p {
-  font-family: Playfair Display !important;
+  font-size: medium;
+  font-weight: normal;
+  font-style: normal;
 }
 
 .messagelist {
   width: 100%;
   height: 100%;
   overflow-y: auto;
+  overflow-x: hidden;
   border-radius: .5rem;
 }
 
@@ -134,7 +136,6 @@ p {
   resize: none;
   font-size: 1.1rem;
   padding: 1.75rem 5rem 1.75rem 1rem;
-  color: #8f84a7dc;
   width: 75vw;
   background: #fff;
   box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.02);
@@ -251,7 +252,8 @@ p {
   ;
 
   p {
-    font-weight: 500;
+    // font-weight: 500;
+    font-size: large;
     white-space: pre-wrap !important;
     word-break: break-all !important;
   }
