--- a/constellation_react/src/sass/style.scss
+++ b/constellation_react/src/sass/style.scss
@@ -93,6 +93,7 @@
   width: 100%;
   height: 100%;
   overflow-y: auto;
+  overflow-x: hidden;
   border-radius: .5rem;
 }
 
