--- a/sui_react/src/sass/style.scss
+++ b/sui_react/src/sass/style.scss
@@ -85,7 +85,7 @@
   width: 100%;
   height: 100%;
   overflow-y: auto;
-  // overflow-x: hidden;
+  overflow-x: hidden;
   border-radius: .5rem;
 }
 
